--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
 	<section class="home">
 		<div class="home-content">
+			<h1>jio ho bihar ke lala ***************
+			</h1>
 			<h3>Hello,It's Me</h3>
 			<h1>santosh kumar</h1>
 			<h3>And I'm a <span class="text"></span></h3>
